Update state of view on click of a solution or on finish of timer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Brain Trainer</string>
+    <string name="correct">CORRECT!</string>
+    <string name="wrong">WRONG!</string>
 </resources>
