Add start/end game mechanics
Player can tap to start instead of starting automatically
When timer runs down, player is shown end game messsage
and can tap to replay

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Brain Trainer</string>
+    <string name="start">Tap to\nStart!</string>
+    <string name="end_game">Game Ended! Tap to Play Again</string>
     <string name="correct">CORRECT!</string>
     <string name="wrong">WRONG!</string>
 </resources>
